--- a/ui/i18n/src/main/res/values/strings.xml
+++ b/ui/i18n/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="MissingTranslation">
 
+    <!-- Shared strings that are, or can, be shared throughout the UI  -->
+    <string name="general_expand_button">Expand</string>
+    <string name="general_collapse_button">Collapse</string>
+
     <!-- Activity and fragment titles -->
     <string name="provider_authority" translatable="false">de.danoeh.antennapod.provider</string>
     <string name="feed_update_receiver_name">Update subscriptions</string>
@@ -582,17 +586,12 @@
     <!-- Report bug -->
     <string name="report_bug_title">Report bug</string>
     <string name="report_bug_message">Sorry to hear something isn’t working. We’d love your help to improve AntennaPod. Please check our forum or GitHub to see if the issue has already been reported. If not, let us know and we’ll investigate.</string>
-
     <string name="report_bug_device_info_title">Device</string>
     <string name="report_bug_attrib_app_version">App version</string>
     <string name="report_bug_attrib_android_version">Android version</string>
     <string name="report_bug_attrib_device_name">Device Name</string>
-
     <string name="report_bug_crash_log_title">Crash log</string>
     <string name="report_bug_crash_log_message">Created: %1$s.</string>
-    <string name="report_bug_crash_log_expand">Expand</string>
-    <string name="report_bug_crash_log_collapse">Collapse</string>
-
     <string name="report_bug_forum_title">Forum</string>
     <string name="report_bug_github_title">GitHub</string>
 
