Fix switching sd card media file path issue (#1777)

--- a/ui/i18n/src/main/res/values/strings.xml
+++ b/ui/i18n/src/main/res/values/strings.xml
@@ -30,6 +30,21 @@
     <string name="subscriptions_label_short">Subscriptions</string>
     <string name="subscriptions_list_label">Subscriptions list</string>
     <string name="cancel_download_label">Cancel download</string>
+    <string name="relocate_media_files">Relocate media files</string>
+    <string name="relocate_media_files_summary">Find and update paths for media files across all storage locations</string>
+    <string name="relocate_media_dialog_title">Relocate Media Files</string>
+    <string name="relocate_media_dialog_message">This will search for your media files across all available storage locations and update their paths in the database. Priority is given to the current storage location.</string>
+    <string name="relocate_media_button">Relocate</string>
+    <string name="relocating_media_progress">Relocating media files...</string>
+    <string name="relocation_starting">Starting relocation...</string>
+    <string name="relocation_checking_files">Checking files... %1$d%%</string>
+    <string name="relocation_checking_media_files">Checking media files</string>
+    <string name="relocation_completed">Relocation completed</string>
+    <string name="relocation_completed_message">%1$d media files relocated successfully</string>
+    <string name="relocation_failed">Relocation failed</string>
+    <string name="relocation_failed_message">Could not complete media file relocation</string>
+    <string name="relocation_channel_name">Media Relocation</string>
+    <string name="relocation_channel_description">Shows progress when checking and relocating media files</string>
     <string name="playback_history_label">Playback history</string>
     <string name="playback_history_label_short">History</string>
     <string name="years_statistics_label">Years</string>
